--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1960,17 +1960,17 @@ sounds:
 
   #MUSIC TRACKS
   basemode_music:
-    file: basemode.flac
+    file: basemode.wav
     volume: 0.50
     loops: -1
     track: music
   world1mode_music:
-    file: world1mode.flac
+    file: world1mode.wav
     volume: 0.50
     loops: -1
     track: music
   world2mode_music:
-    file: world2mode.flac
+    file: world2mode.wav
     volume: 0.50
     loops: -1
     track: music
@@ -1991,17 +1991,17 @@ sounds:
     track: music
 
   nightmode_music:
-    file: nightmode_kit.flac
+    file: nightmode_kit.wav
     volume: 0.50
     loops: -1
     track: music
   nighthurryup_music:
-    file: nighthurryup.flac
+    file: nighthurryup.wav
     volume: 1
     loops: -1
     track: music
   villagermb_music:
-    file: villagermb.flac
+    file: villagermb.wav
     volume: 0.80
     loops: -1
     track: music
