--- a/modes/base/config/base.yaml
+++ b/modes/base/config/base.yaml
@@ -504,236 +504,292 @@ achievement_groups:
     rotate_right_events: rotate_mission_rotator
 
 
+
+widget_player:
+  mode_world1_started: widgetdebug
+
+widgets:
+  widgetdebug:
+    - type: image        #SCORE BACKGROUND
+      image: score_background
+      anchor_x: left
+      anchor_y: top
+      y: top-15
+      x: left+15
+      z: 10
+    - type: text        #VILLAGER JACKPOT
+      text: Villager Jackpot - (player|villager_jackpot)
+      number_grouping: true
+      min_digits: 2
+      font_name: ARLRDBD
+      font_size: 25
+      y: top-25
+      x: left+100
+      z: 100
+      anchor_x: left
+      anchor_y: top
+    - type: text        #WORLD JACKPOT
+      text: World Jackpot - (player|world_jackpot_base) x Items (player|world_jackpot_items) x Traveled (player|world_jackpot_worlds) x MB (player|multiplier_mb) = (player|world_jackpot)
+      number_grouping: true
+      min_digits: 2
+      font_name: ARLRDBD
+      font_size: 25
+      y: top-50
+      x: left+100
+      z: 100
+      anchor_x: left
+      anchor_y: top
+    - type: text        #WORLD JACKPOT
+      text: Crafting Enabled - (player|crafting_enabled)
+      number_grouping: true
+      min_digits: 2
+      font_name: ARLRDBD
+      font_size: 25
+      y: top-75
+      x: left+100
+      z: 100
+      anchor_x: left
+      anchor_y: top
+    - type: text        #WORLD JACKPOT
+      text: Crafting Full - (player|crafting_full)
+      number_grouping: true
+      min_digits: 2
+      font_name: ARLRDBD
+      font_size: 25
+      y: top-100
+      x: left+100
+      z: 100
+      anchor_x: left
+      anchor_y: top
+    - type: text        #WORLD JACKPOT
+      text: Crafting Ready - (player|crafting_ready)
+      number_grouping: true
+      min_digits: 2
+      font_name: ARLRDBD
+      font_size: 25
+      y: top-125
+      x: left+100
+      z: 100
+      anchor_x: left
+      anchor_y: top
+    - type: text        #WORLD JACKPOT
+      text: Villager MB Ready - (player|villagermb_ready)
+      number_grouping: true
+      min_digits: 2
+      font_name: ARLRDBD
+      font_size: 25
+      y: top-150
+      x: left+100
+      z: 100
+      anchor_x: left
+      anchor_y: top
+    - type: text        #WORLD JACKPOT
+      text: Travel Ready - (player|travel_enabled)
+      number_grouping: true
+      min_digits: 2
+      font_name: ARLRDBD
+      font_size: 25
+      y: top-175
+      x: left+100
+      z: 100
+      anchor_x: left
+      anchor_y: top
+
+    - type: text        #WORLD JACKPOT
+      text: Diverter State - (player|diverter_state)
+      number_grouping: true
+      min_digits: 2
+      font_name: ARLRDBD
+      font_size: 25
+      y: top-200
+      x: left+100
+      z: 100
+      anchor_x: left
+      anchor_y: top
+
 slides:
   base_pincraft_slide:
-    priority: 100
-    widgets:
-      - type: text        #VILLAGER JACKPOT
-        text: Villager Jackpot - (player|villager_jackpot)
-        number_grouping: true
-        min_digits: 2
-        font_name: ARLRDBD
-        font_size: 25
-        y: top-50
-        x: left+100
-        z: 100
-        anchor_x: left
-        anchor_y: top
-      - type: text        #WORLD JACKPOT
-        text: World Jackpot - (player|world_jackpot_base) x Items (player|world_jackpot_items) x Traveled (player|world_jackpot_worlds) x MB (player|multiplier_mb) = (player|world_jackpot)
-        number_grouping: true
-        min_digits: 2
-        font_name: ARLRDBD
-        font_size: 25
-        y: top-100
-        x: left+100
-        z: 100
-        anchor_x: left
-        anchor_y: top
-      - type: text        #WORLD JACKPOT
-        text: Crafting Enabled - (player|crafting_enabled) | Crafting Full - (player|crafting_full) | Crafting Ready - (player|crafting_ready) | Villager MB Ready - (player|villagermb_ready) | Travel Ready - (player|travel_enabled)
-        number_grouping: true
-        min_digits: 2
-        font_name: ARLRDBD
-        font_size: 25
-        y: top-150
-        x: left+100
-        z: 100
-        anchor_x: left
-        anchor_y: top
-      - type: text        #WORLD JACKPOT
-        text: Diverter State - (player|diverter_state)
-        number_grouping: true
-        min_digits: 2
-        font_name: ARLRDBD
-        font_size: 25
-        y: top-200
-        x: left+100
-        z: 100
-        anchor_x: left
-        anchor_y: top
-  
-      - type: text        #MULTIBALL MULTIPLIER
-        text: MB - (player|multiplier_mb)x
-        number_grouping: true
-        min_digits: 2
-        font_name: ARLRDBD
-        font_size: 25
-        y: top-50
-        x: right-100
-        z: 100
-        anchor_x: left
-        anchor_y: top
-      - type: text        #PLAYER 1 SCORE
-        text: PLAYER 1 - (player1|score)
-        number_grouping: true
-        min_digits: 2
-        font_name: ARLRDBD
-        font_size: 25
-        y: bottom+260
-        x: left+50
-        z: 100
-        anchor_x: left
-        anchor_y: top
-      - type: text        #PLAYER 2 SCORE
-        text: PLAYER 2 - (player2|score)
-        number_grouping: true
-        min_digits: 2
-        font_name: ARLRDBD
-        font_size: 25
-        y: bottom+200
-        x: left+50
-        z: 100
-        anchor_x: left
-        anchor_y: top
-      - type: text        #PLAYER 3 SCORE
-        text: PLAYER 3 - (player3|score)
-        number_grouping: true
-        min_digits: 2
-        font_name: ARLRDBD
-        font_size: 25
-        y: bottom+140
-        x: left+50
-        z: 100
-        anchor_x: left
-        anchor_y: top
-      - type: text        #PLAYER 4 SCORE
-        text: PLAYER 4 - (player4|score)
-        number_grouping: true
-        min_digits: 2
-        font_name: ARLRDBD
-        font_size: 25
-        y: bottom+80
-        x: left+50
-        z: 100
-        anchor_x: left
-        anchor_y: top
-      - type: text        #TOOL 1 MULTIPLIER
-        text: (player|sword) x
-        font_name: ARLRDBD
-        font_size: 25
-        y: top-188
-        x: right-60
-        z: 100
-        anchor_x: center
-        anchor_y: top
-      - type: text        #TOOL 2 MULTIPLIER
-        text: (player|pickaxe) x
-        font_name: ARLRDBD
-        font_size: 25
-        y: top-302
-        x: right-60
-        z: 100
-        anchor_x: center
-        anchor_y: top
-      - type: text        #TOOL 3 MULTIPLIER
-        text: (player|axe) x
-        font_name: ARLRDBD
-        font_size: 25
-        y: top-416
-        x: right-60
-        z: 100
-        anchor_x: center
-        anchor_y: top
-      - type: text        #TOOL 4 MULTIPLIER
-        text: (player|shovel) x
-        font_name: ARLRDBD
-        font_size: 25
-        y: top-530
-        x: right-60
-        z: 100
-        anchor_x: center
-        anchor_y: top
-      - type: text        #ITEM 1 NEEDED
-        text: (player|world_item1_remaining)
-        font_name: ARLRDBD
-        font_size: 25
-        y: bottom+24
-        x: right-462
-        z: 100
-        anchor_x: center
-        anchor_y: bottom
-      - type: text        #ITEM 2 NEEDED
-        text: (player|world_item2_remaining)
-        font_name: ARLRDBD
-        font_size: 25
-        y: bottom+24
-        x: right-373
-        z: 100
-        anchor_x: center
-        anchor_y: bottom
-      - type: text        #ITEM 3 NEEDED
-        text: (player|world_item3_remaining)
-        font_name: ARLRDBD
-        font_size: 25
-        y: bottom+24
-        x: right-284
-        z: 100
-        anchor_x: center
-        anchor_y: bottom
-      - type: text        #ITEM 4 NEEDED
-        text: (player|world_item4_remaining)
-        font_name: ARLRDBD
-        font_size: 25
-        y: bottom+24
-        x: right-196
-        z: 100
-        anchor_x: center
-        anchor_y: bottom
-      - type: text        #BALL TEXT
-        text: BALL (ball)
-        font_name: ARLRDBD
-        font_size: 25
-        y: bottom+50
-        x: right-60
-        z: 100
-        anchor_x: center
-        anchor_y: bottom
-      - type: image        #BALL1
-        image: heart_empty
-        anchor_x: right
-        anchor_y: bottom
-        y: bottom+15
-        x: right-15
-        z: 10
-      - type: image        #BALL2
-        image: heart_full
-        anchor_x: right
-        anchor_y: bottom
-        y: bottom+15
-        x: right-45 
-        z: 10
-      - type: image        #BALL3
-        image: heart_full
-        anchor_x: right
-        anchor_y: bottom
-        y: bottom+15
-        x: right-75 
-        z: 10
-      - type: image        #TOOL BACKGROUND
-        image: tool_background
-        anchor_x: right
-        anchor_y: bottom
-        y: bottom+200
-        x: right-15
-        z: 10
-      - type: image        #ITEM BACKGROUND
-        image: item_background
-        anchor_x: left
-        anchor_y: bottom
-        y: bottom+15
-        x: left+860
-        z: 10
-      - type: image        #SCORE BACKGROUND
-        image: score_background
-        anchor_x: left
-        anchor_y: bottom
-        y: bottom+15
-        x: left+15
-        z: 10
-      - type: image        #WORLD BACKGROUND
-        image: world1_background
-        z: 0
+    - type: text        #MULTIBALL MULTIPLIER
+      text: MB - (player|multiplier_mb)x
+      number_grouping: true
+      min_digits: 2
+      font_name: ARLRDBD
+      font_size: 25
+      y: top-50
+      x: right-100
+      z: 100
+      anchor_x: left
+      anchor_y: top
+    - type: text        #PLAYER 1 SCORE
+      text: PLAYER 1 - (player1|score)
+      number_grouping: true
+      min_digits: 2
+      font_name: ARLRDBD
+      font_size: 25
+      y: bottom+260
+      x: left+50
+      z: 100
+      anchor_x: left
+      anchor_y: top
+    - type: text        #PLAYER 2 SCORE
+      text: PLAYER 2 - (player2|score)
+      number_grouping: true
+      min_digits: 2
+      font_name: ARLRDBD
+      font_size: 25
+      y: bottom+200
+      x: left+50
+      z: 100
+      anchor_x: left
+      anchor_y: top
+    - type: text        #PLAYER 3 SCORE
+      text: PLAYER 3 - (player3|score)
+      number_grouping: true
+      min_digits: 2
+      font_name: ARLRDBD
+      font_size: 25
+      y: bottom+140
+      x: left+50
+      z: 100
+      anchor_x: left
+      anchor_y: top
+    - type: text        #PLAYER 4 SCORE
+      text: PLAYER 4 - (player4|score)
+      number_grouping: true
+      min_digits: 2
+      font_name: ARLRDBD
+      font_size: 25
+      y: bottom+80
+      x: left+50
+      z: 100
+      anchor_x: left
+      anchor_y: top
+    - type: text        #TOOL 1 MULTIPLIER
+      text: (player|sword) x
+      font_name: ARLRDBD
+      font_size: 25
+      y: top-188
+      x: right-60
+      z: 100
+      anchor_x: center
+      anchor_y: top
+    - type: text        #TOOL 2 MULTIPLIER
+      text: (player|pickaxe) x
+      font_name: ARLRDBD
+      font_size: 25
+      y: top-302
+      x: right-60
+      z: 100
+      anchor_x: center
+      anchor_y: top
+    - type: text        #TOOL 3 MULTIPLIER
+      text: (player|axe) x
+      font_name: ARLRDBD
+      font_size: 25
+      y: top-416
+      x: right-60
+      z: 100
+      anchor_x: center
+      anchor_y: top
+    - type: text        #TOOL 4 MULTIPLIER
+      text: (player|shovel) x
+      font_name: ARLRDBD
+      font_size: 25
+      y: top-530
+      x: right-60
+      z: 100
+      anchor_x: center
+      anchor_y: top
+    - type: text        #ITEM 1 NEEDED
+      text: (player|world_item1_remaining)
+      font_name: ARLRDBD
+      font_size: 25
+      y: bottom+24
+      x: right-462
+      z: 100
+      anchor_x: center
+      anchor_y: bottom
+    - type: text        #ITEM 2 NEEDED
+      text: (player|world_item2_remaining)
+      font_name: ARLRDBD
+      font_size: 25
+      y: bottom+24
+      x: right-373
+      z: 100
+      anchor_x: center
+      anchor_y: bottom
+    - type: text        #ITEM 3 NEEDED
+      text: (player|world_item3_remaining)
+      font_name: ARLRDBD
+      font_size: 25
+      y: bottom+24
+      x: right-284
+      z: 100
+      anchor_x: center
+      anchor_y: bottom
+    - type: text        #ITEM 4 NEEDED
+      text: (player|world_item4_remaining)
+      font_name: ARLRDBD
+      font_size: 25
+      y: bottom+24
+      x: right-196
+      z: 100
+      anchor_x: center
+      anchor_y: bottom
+    - type: text        #BALL TEXT
+      text: BALL (ball)
+      font_name: ARLRDBD
+      font_size: 25
+      y: bottom+50
+      x: right-60
+      z: 100
+      anchor_x: center
+      anchor_y: bottom
+    - type: image        #BALL1
+      image: heart_empty
+      anchor_x: right
+      anchor_y: bottom
+      y: bottom+15
+      x: right-15
+      z: 10
+    - type: image        #BALL2
+      image: heart_full
+      anchor_x: right
+      anchor_y: bottom
+      y: bottom+15
+      x: right-45 
+      z: 10
+    - type: image        #BALL3
+      image: heart_full
+      anchor_x: right
+      anchor_y: bottom
+      y: bottom+15
+      x: right-75 
+      z: 10
+    - type: image        #TOOL BACKGROUND
+      image: tool_background
+      anchor_x: right
+      anchor_y: bottom
+      y: bottom+200
+      x: right-15
+      z: 10
+    - type: image        #ITEM BACKGROUND
+      image: item_background
+      anchor_x: left
+      anchor_y: bottom
+      y: bottom+15
+      x: left+860
+      z: 10
+    - type: image        #SCORE BACKGROUND
+      image: score_background
+      anchor_x: left
+      anchor_y: bottom
+      y: bottom+15
+      x: left+15
+      z: 10
+    - type: image        #WORLD BACKGROUND
+      image: world1_background
+      z: 0
 
 slide_player:
   mode_base_started: base_pincraft_slide
